<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mydearmechanic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mydearmechanic.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mydearmechanic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.mydearmechanic.ui.aboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.mydearmechanic.ui.shareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_rule"
        android:name="com.mydearmechanic.ui.ruleFragment"
        android:label="@string/menu_rule"
        tools:layout="@layout/fragment_rule" />

    <fragment
        android:id="@+id/nav_lang"
        android:name="com.mydearmechanic.ui.languageFragment"
        android:label="@string/menu_lang"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.mydearmechanic.ui.logoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />


</navigation>